--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -49,33 +49,47 @@ input[type=submit] {
 
 .chatbox{
     width: 80%;
-    height: 960px;
+    min-height: 760px;
+    height: 760px;
+    //height: auto;
     float: left;
     background-color: rgb(101, 98, 146);
+    position: relative;
     
-    #form {
-        width: 80%;
-        background: rgb(0, 0, 0); 
-        padding: 0.25rem; 
-        position: fixed; 
-        bottom: 0; 
-        left: 0;
-        display: flex; 
-        height: 3rem; 
-        box-sizing: border-box; 
-        backdrop-filter: blur(10px); 
-    
-        > button {
-            background: #333; 
-            border: none; 
-            padding: 0 1rem; 
-            margin: 0.25rem; 
-            border-radius: 3px; 
-            outline: none; 
-            color: #fff;
-        }
+    //line-height:760px;
+    /*
+    > div{
+        width: 100%;
+        height: 200px;
+        overflow: auto;
+        position: absolute;
+        bottom: 0;
     }
-    
+    */
+
+}
+
+#form {
+    width: 80%;
+    background: rgb(0, 0, 0); 
+    padding: 0.25rem; 
+    position: fixed; 
+    bottom: 0; 
+    left: 0;
+    display: flex; 
+    height: 3rem; 
+    box-sizing: border-box; 
+    backdrop-filter: blur(10px); 
+
+    > button {
+        background: #333; 
+        border: none; 
+        padding: 0 1rem; 
+        margin: 0.25rem; 
+        border-radius: 3px; 
+        outline: none; 
+        color: #fff;
+    }
 }
 
 h1{
@@ -87,7 +101,7 @@ h1{
     overflow: hidden;
     text-align: center;
     background-color: rgb(41, 31, 78);
-    height: 960px;
+    height: 800px;
 }
 #input { 
     border: none; 
@@ -104,6 +118,9 @@ h1{
     list-style-type: none; 
     margin: 0; 
     padding: 0;
-overflow:auto; }
-#messages > li { padding: 0.5rem 1rem; }
+    overflow: auto;
+    position: absolute;
+    bottom: 0px;
+}
+#messages > li { padding: 0.5rem 1rem;}
 #messages > li:nth-child(odd) { background: #efefef; }
