--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -114,6 +114,17 @@ h1{
     }
 }
 
+#online {
+    list-style-type: none;
+    color: white;
+    margin: 0; 
+    padding: 0;
+    > li {
+        text-align: left;
+        font-size: 17px;
+        padding: 0.5rem 1rem;
+    }
+}
 #messages { 
     list-style-type: none; 
     margin: 0; 
@@ -123,4 +134,4 @@ h1{
     bottom: 0px;
 }
 #messages > li { padding: 0.5rem 1rem;}
-#messages > li:nth-child(odd) { background: #efefef; }
+//#messages > li:nth-child(odd) { background: #efefef; }
