--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0px;
   height: 100%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #1d1d1d;
 }
 
@@ -73,11 +73,21 @@ input[type=submit] {
   width: 80%;
   margin-right: 7px;
   min-height: 720px;
-  height: auto;
+  height: 720px;
   float: left;
   background-color: #333333;
   position: relative;
   border-radius: 4px;
+}
+
+.chatbox > div {
+  border-radius: 4px;
+  max-height: 100%;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  overflow-y: auto;
+  background-color: #333333;
 }
 
 .userList {
@@ -122,6 +132,12 @@ h1 {
   margin: 0;
 }
 
+.divider {
+  border-top: 6px solid white;
+  border-radius: 5px;
+  width: 20%;
+}
+
 #input {
   border: none;
   padding: 0 1rem;
@@ -151,10 +167,9 @@ h1 {
 
 #messages {
   list-style-type: none;
+  width: 80%;
   margin: 0;
   padding: 0;
-  overflow: auto;
-  position: absolute;
   bottom: 0px;
 }
 
@@ -171,5 +186,16 @@ h1 {
   color: #afafaf;
   vertical-align: top;
   font-size: 13px;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    padding: 10px;
+    margin: 0;
+    font-size: 20px;
+  }
+  .chatbox {
+    width: 75%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
